Added some client routes and sass file structure

--- a/client/src/static/sass/main.scss
+++ b/client/src/static/sass/main.scss
@@ -1,4 +1,7 @@
 @import "_base";
+@import "_mixins";
+@import "_typography";
 @import "_layout";
 @import "_keyframes";
+@import "_components";
 @import "./components/index";
