Added landing graphics and finished Landing page stying

--- a/client/src/static/sass/_components.scss
+++ b/client/src/static/sass/_components.scss
@@ -10,4 +10,77 @@
     &-smaller {
         // font-size: 
     }
+
+    &--main {
+        color: white;
+        padding: 1.5rem 2rem;
+        background-color: $color-main;
+    }
+}
+
+.svg {
+    width: 35rem;
+
+    &--second {
+        width: 40rem;
+    }
+
+    &__main {
+        width: 50rem;
+    }
+}
+
+.main {
+    margin: 4rem auto;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+
+    &__section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 6rem 0;
+        // &__graphic {
+        //     width: 
+        // }
+
+        &__text {
+            max-width: 50%;
+            font-size: 2.2rem;
+            font-weight: 500;
+            line-height: 1.5;
+        }
+    }
+}
+
+.cta {
+    background-color: $color-offset;
+    padding: 8rem 0;
+
+    & > .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        & > h2 {
+            margin: 3rem 0;
+        }
+    }
+}
+
+.footer {
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    background-color: $color-main;
+
+    & > .container {
+        width: 100%;
+    }
+
+    h3 {
+        color: white;
+        font-weight: 400;
+    }
 }
