--- a/client/src/static/sass/components/Header.scss
+++ b/client/src/static/sass/components/Header.scss
@@ -1,7 +1,5 @@
-$main-color: #536DFE;
-
 .header {
-    background-color: $main-color;
+    background-color: $color-main;
     
     .container {
         height: 10vh;
