--- a/client/src/static/sass/_mixins.scss
+++ b/client/src/static/sass/_mixins.scss
@@ -7,3 +7,8 @@
     color: black;
     text-decoration: none;
 }
+
+@mixin outline-card {
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    border: 1px solid rgba(0,0,0,.125);
+}
